src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Core_Code_Name_EPM_ID__c</fullName>
        <description>VPLCH Level 4</description>
        <label>Code Name EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Code_Name__c</fullName>
        <description>VPLCH Level 4</description>
        <label>Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Division_Code_Short_Name__c</fullName>
        <label>Division Code Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Division_Code__c</fullName>
        <description>A list of all divisions this product could be associated with across the VPH and VPLCH Hierarchy</description>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_EPM_Term_Type_Cd__c</fullName>
        <description>Different types of EPM term types. Most useful when trying to differentiate terms at the same level in a single hierarchy but of different types (eg to differentiate between VPCH L2 and VPLCH L2).</description>
        <label>EPM Term Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_External_Source_Name__c</fullName>
        <description>The source of the external upstream system</description>
        <label>External Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Group_Code_Short_Name__c</fullName>
        <label>Group Code Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Group_Code__c</fullName>
        <description>Group Code</description>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Hierarchy_ID__c</fullName>
        <description>ID for the hierarchy that the record is being sourced from</description>
        <label>Hierarchy ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Hierarchy_Name__c</fullName>
        <description>Description of which Hierarchy this record was mastered in</description>
        <label>Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_INF_KPI_ProdClass__c</fullName>
        <label>KPI - INF Product Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Visible_Flag_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Integration/iPaas. 
Each row must have either Yes or No defined.
Set to True by default for VPH L2 &amp; L3 and VPLCH L2 and L4.</description>
        <label>IPS Visible Flag - External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Visible_Flag_Internal__c</fullName>
        <description>Set within SFDC by a local IT/Sys Admin, Data Ops/Steward or KTBR. At the time of initial data setup, this is set to BLANK or NULL. If set manually, the value of this field overrides the visibility setting obtained from integration/externally.</description>
        <inlineHelpText>Set within SFDC by a local IT/Sys Admin, Data Ops/Steward or KTBR. At the time of initial data setup, this is set to BLANK or NULL. If set manually, the value of this field overrides the visibility setting obtained from integration/externally.</inlineHelpText>
        <label>IPS Visible Flag - Internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_IPS_Visible_Flag__c</fullName>
        <description>Formula evaluates value in IPS Visible Internal flag. If value is Blank, take the value of External flag. Else take the value of the Internal flag.</description>
        <formula>IF (ISBLANK( TEXT( Core_IPS_Visible_Flag_Internal__c )),  Core_IPS_Visible_Flag_External__c, IF( TEXT( Core_IPS_Visible_Flag_Internal__c ) = &quot;YES&quot;, True, False)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPS Visible Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Visible_Flag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Product is visible to IPS Admins or not. Administered by the Product Data Steward who has the ability to set the value from No to Yes, and from Yes to No. 
If already enabled (value is Yes), it should set to No with extreme caution, as the Product may be in active use in Cases or other transactions.</description>
        <label>IPS Visible Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Inf_KPI_ProdFamily__c</fullName>
        <label>KPI - INF Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Inf_KPI_ProdGroup__c</fullName>
        <label>KPI - INF Product Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Pipeline_Launch_Date__c</fullName>
        <label>Pipeline Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Platform_Config_EPM_ID__c</fullName>
        <description>VPLCH Level 2</description>
        <label>Platform Config EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Platform_Config__c</fullName>
        <description>A more detailed view of the platform</description>
        <label>Platform Config</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Platform_EPM_ID__c</fullName>
        <description>VPLCH Level 1</description>
        <label>Platform EPM ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Platform_Name__c</fullName>
        <description>VPLCH Level 1</description>
        <label>Platform Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Family_EPM_ID__c</fullName>
        <description>VPH Level 2 EPM ID</description>
        <label>Product Family EPM ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Family__c</fullName>
        <description>VPH Level 2</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Name_EPM_ID__c</fullName>
        <label>Product Name EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Org__c</fullName>
        <description>Used by iPaaS Product Integrations, should not be displayed for users or used by anyone other than iPaaS.
Defines which organization the product belongs to.</description>
        <label>Product_Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>IPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Product_Series_EPM_ID__c</fullName>
        <description>EPM ID for the VPH Level 3</description>
        <label>Product Series EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Series__c</fullName>
        <description>Product Series</description>
        <label>Product Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Status__c</fullName>
        <description>Integration Field - fg_mtrl_sts_cd</description>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Type_EPM_ID__c</fullName>
        <description>VPLCH lvl 3
VPH lvl 1</description>
        <label>Product Type EPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Type__c</fullName>
        <description>Product type</description>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Sales_Visible_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to make a Product visible for use in Sales processes. Checking this flag makes the Product available for the Price Book.</description>
        <inlineHelpText>Check this box to make a Product visible for use in Sales processes. Checking this flag makes the Product available for the Standard Price Book.</inlineHelpText>
        <label>Sales Visible Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Unique_ID__c</fullName>
        <description>Unique ID of the hierarchy for this product</description>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_iPaaS_Load_ID__c</fullName>
        <description>For integration use only. Allows the iPaaS integration to know when a product was last touched by iPaaS.</description>
        <label>iPaaS Load ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Core_All_Integration_Data</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Core_IPS_Visible_Flag__c</columns>
        <columns>Core_Unique_ID__c</columns>
        <columns>Core_Product_Name_EPM_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>iuser</value>
        </filters>
        <label>All Integration</label>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Only_Products_Integration</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Core_EPM_Term_Type_Cd__c</columns>
        <columns>Core_Code_Name__c</columns>
        <columns>Core_IPS_Visible_Flag__c</columns>
        <columns>Core_Unique_ID__c</columns>
        <columns>Core_Product_Name_EPM_ID__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Core_Pipeline_Launch_Date__c</columns>
        <columns>Core_Hierarchy_ID__c</columns>
        <columns>Core_Hierarchy_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Product_Org__c</field>
            <operation>equals</operation>
            <value>IPS</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>iuser</value>
        </filters>
        <label>IPS All Products Integration</label>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Visible_All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Core_Code_Name__c</columns>
        <columns>Core_EPM_Term_Type_Cd__c</columns>
        <columns>Core_Hierarchy_ID__c</columns>
        <columns>Core_Hierarchy_Name__c</columns>
        <columns>Core_IPS_Visible_Flag__c</columns>
        <columns>Core_IPS_Visible_Flag_External__c</columns>
        <columns>Core_IPS_Visible_Flag_Internal__c</columns>
        <columns>Core_Pipeline_Launch_Date__c</columns>
        <columns>Core_Product_Org__c</columns>
        <columns>Core_Product_Name_EPM_ID__c</columns>
        <columns>Core_Sales_Visible_Flag__c</columns>
        <columns>Core_Unique_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_IPS_Visible_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IPS Visible All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Core_IPS_Product</fullName>
        <active>true</active>
        <label>Core_IPS_Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Sales_Product</fullName>
        <active>true</active>
        <label>Core_Sales_Product</label>
    </recordTypes>
    <validationRules>
        <fullName>Core_IPS_Cannot_Revert_IPS_Visible</fullName>
        <active>true</active>
        <description>Once the IPS Internal Visible flag is set to True, it cannot be set to False.
This is needed to ensure there is no cascading impact to Assets, MAP, PAR and Case that uses a particular Product ID.</description>
        <errorConditionFormula>AND
(  
OR 
(
(TEXT( Core_IPS_Visible_Flag_Internal__c ) = &quot;NO&quot;), 
(TEXT( Core_IPS_Visible_Flag_Internal__c ) = &quot;&quot;)
),
TEXT (PRIORVALUE (Core_IPS_Visible_Flag_Internal__c)) = &quot;YES&quot;
)</errorConditionFormula>
        <errorDisplayField>Core_IPS_Visible_Flag_Internal__c</errorDisplayField>
        <errorMessage>Once set to Yes, IPS Visible Flag (Internal) cannot be reverted. Press Cancel to Exit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_No_Sales_Product_for_IPS</fullName>
        <active>true</active>
        <description>Prevent IPS Visible Flag being set to True when Product Org is IPS.</description>
        <errorConditionFormula>IF( Core_IPS_Visible_Flag__c  , IF (  Core_Sales_Visible_Flag__c , TRUE, FALSE ), FALSE)</errorConditionFormula>
        <errorMessage>A single product record cannot be made visible for both Sales and IPS.</errorMessage>
    </validationRules>
</CustomObject>